--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 git clone https://github.com/PlagiatBros/PlagiatVideo --recurse-submodules
-sh PlagiatVideo/launch_pyta.sh
+./PlagiatVideo/launch_pyta.sh
